HelloUltraviolet/Fixtures/RejectedSource/Expressions/AllocImplicitNoRegion/Source/Main.uv
//! Rejected expression specimen for implicit allocation without an active region.

public procedure allocImplicitNoRegionReference() -> i32 {
    return ^1
}
